partly updated sbt to 0.10.1