@@ -1,2 +1,2 @@
 set SCRIPT_DIR=%~dp0
-java -server -Xmx512M -Xss3M -jar "%SCRIPT_DIR%bin/sbt-launch.jar" "@sbt.boot.properties" %*
+java -Dfile.encoding=UTF8 -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m -server -Xmx512M -Xss3M -jar "%SCRIPT_DIR%project\sbt-launch.jar" %*
