@@ -1,2 +1,2 @@
 #!/bin/sh
-java -server -Xmx512M -Xss3M -jar `dirname $0`/bin/sbt-launch.jar "@sbt.boot.properties" "$@"
+java -Dfile.encoding=UTF8 -Dsbt.boot.directory=~/.sbt/boot/ -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m -server -Xmx512M -Xss3M -jar `dirname $0`/project/sbt-launch.jar "$@"
